# FPSEngine

./: .gitignore  BoundingVolume.h  Box.h  CMakeLists.txt  CMakeUserPresets.json  Camera.cpp  Camera.h  Entity.cpp  Entity.h  FPSGame.cpp  FPSGame.h  Game.cpp  Game.h  Geometry.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MyGui.cpp  MyGui.h  Player.h  RayCast.cpp  RayCast.h  Readme.md  ResourceManager.cpp  ResourceManager.h  Shader.h  Texture.cpp  Texture.h  Tracker.h  Transform.h  Util.cpp  Util.h  main.cpp  run.sh  scene.json  vcpkg.json
assets/models/Eye/: eyeball.mtl
assets/models/Skeleton/: skeleton.mtl
assets/models/Skull/: skull.mtl
assets/models/ak47/: ak47.mtl
build-debug/: CMakeCache.txt
engine/: CMakeLists.txt
engine/include/engine/: Animation.h  Animation.hpp  AssetImporter.hpp  AssetManager.hpp  AudioManager.hpp  AudioSource.hpp  BoundingVolume.h  BoundingVolume.hpp  CMakeLists.txt  Camera.hpp  DebugRenderer.hpp  DeltaTimer.hpp  Engine.hpp  Entity.hpp  GameObject.h  GameObject.hpp  Geometry.hpp  InputManager.hpp  Light.hpp  LoadingScreen.hpp  Math.h  Math.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  MyGui.h  MyGui.hpp  ParticleEmitter.h  ParticleEmitter.hpp  RayCast.h  RayCast.hpp  Renderer.hpp  ResourceManager.h  ResourceManager.hpp  Scene.hpp  Shader.h  Shader.hpp  Singleton.h  Singleton.hpp  (+9 more)
engine/include/glad/: glad.h
engine/src/: Animation.cpp  AssetImporter.cpp  BoundingVolume.cpp  Camera.cpp  GameObject.cpp  Geometry.cpp  Light.cpp  Math.cpp  Mesh.cpp  Model.cpp  MyGui.cpp  Random.cpp  RayCast.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  SkinnedModel.cpp  Terrain.cpp  Texture.cpp  Transform.cpp  Util.cpp
include/glad/: glad.h
include/imgui/: imgui_impl_opengl3_loader.h
shaders/: basic.vert  color.frag  color.glsl  color.vert  frag.glsl  mesh_vertex.glsl  model.frag  model.glsl  model.vert  vertex.glsl
src/: Camera.cpp  Camera.h  Entity.h  FPSGame.cpp  FPSGame.h  GameObject.h  Geometry.h  Player.h  Shader.h  Skull.h  Transform.h  Util.cpp  main.cpp  protocol.h
src/core/: AudioManager.h  AudioSource.h  BoundingVolume.h  Entity.cpp  Entity.h  GLResource.h  GameObject.cpp  GameObject.h  InputManager.h  Mesh.cpp  ParticleEmitter.h  RayCast.h  ResourceManager.cpp  ResourceManager.h  Util.cpp
src/engine/: Animation.h  AudioManager.h  AudioSource.h  Camera.cpp  Camera.h  Clock.h  GameObject.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  LoadingScreen.h  Math.h  Mesh.h  Model.h  MyGui.cpp  ParticleEmitter.h  Perlin.h  Random.cpp  Random.h  RayCast.cpp  RayCast.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Speaker.cpp  Terrain.cpp  Terrain.h  Texture.h  Transform.cpp  Transform.h  Util.h
src/game/: CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  FPSGame.cpp  FPSGame.h  Player.h  Skull.h  Tracker.h  Weapon.h  main.cpp
src/game2/: game.h  main.cpp
src/lab/: CMakeLists.txt  Drone.hpp  EnemyManager.cpp  FPSGame.cpp  FPSGame.h  Player.cpp  Player.h  Player.hpp  Tracker.h  Weapon.hpp  drone.h  main.cpp
src/server/: main.cpp
tests/: test_main.cpp
